--- a/index.html
+++ b/index.html
@@ -5,18 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Shojumaru&display=swap" rel="stylesheet">
+    <title>Sudoku!</title>
     <script
         src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
         crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container">
 
+    <div>
+        <h1>Sudoku!</h1>
+    </div>
+    
+    <div class="instructions">
+        <h3>How To Play</h3>
+            <p>Sudoku is a 9x9 grid based puzzle game in which the player must place numbers 1 through 9 in the empty boxes in such a way that no same number lies in the same row, column, or 3x3 box. To place the numbers, start by selecting the box in which you would like to place a number and then click on the corresponding number value to fill in the box. Beware, some mistakes may not become apparent until you progress further in the puzzle so be sure that you are certain of your entries! Best of Luck!</p>
+    </div>
+
+    <div>
+       <button class="start">Start Game</button>
+    </div>
+
+    <div>
+        <button class="begin">Begin</button>
+    </div>
+
+    <div class="container">
+        <div class="row" row="0"></div>
+        <div class="row" row="1"></div>
+        <div class="row" row="2"></div>
+        <div class="row" row="3"></div>
+        <div class="row" row="4"></div>
+        <div class="row" row="5"></div>
+        <div class="row" row="6"></div>
+        <div class="row" row="7"></div>
+        <div class="row" row="8"></div>
+    </div>
+
+    <div class="difficulty">
+        <h3>Choose Your Difficulty</h3>
+        <button class="easy">Easy</button>
+        <button class="medium">Medium</button>
+        <button class="hard">Hard</button>
+    </div>
+
+    <div class="button-container">
+        <button class="numbers">1</button>
+        <button class="numbers">2</button>
+        <button class="numbers">3</button>
+        <button class="numbers">4</button>
+        <button class="numbers">5</button>
+        <button class="numbers">6</button>
+        <button class="numbers">7</button>
+        <button class="numbers">8</button>
+        <button class="numbers">9</button>
+        <button class="numbers" id="remove-num">&#8676;</button>
     </div>
 
 
     <script src="js/app.js"></script>
 </body>
+<footer>
+        <audio autoplay="autoplay" controls="controls" loop="loop" >
+                <source src="https://ia800209.us.archive.org/16/items/NujabesBattlecry1652932Soundcloud1/Nujabes%20-%20Battlecry_1652932_soundcloud%20%281%29.mp3" type="audio/mpeg" />
+               </audio>
+</footer>
 </html>
