added restart button mistake indicator

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     </div>
     
     <div class="instructions">
-        <h3>How To Play</h3>
-            <p>Sudoku is a 9x9 grid based puzzle game in which the player must place numbers 1 through 9 in the empty boxes in such a way that no same number lies in the same row, column, or 3x3 box. To place the numbers, start by selecting the box in which you would like to place a number and then click on the corresponding number value to fill in the box. Beware, some mistakes may not become apparent until you progress further in the puzzle so be sure that you are certain of your entries! Best of Luck!</p>
+        <h2>How To Play</h2>
+            <h3>Sudoku is a 9x9 grid based puzzle game in which the player must place numbers 1 through 9 in the empty boxes in such a way that no same number lies in the same row, column, or 3x3 box.</h3>
+
+            <h3>To place the numbers, start by selecting the box in which you would like to place a number and then click on the corresponding number value to fill in the box. Beware, some mistakes will turn the box red! If you complete the grid and there are no red boxes, you win! Best of Luck!</h3>
     </div>
 
     <div>
@@ -63,12 +65,12 @@
         <button class="numbers" id="remove-num">&#8676;</button>
     </div>
 
+    <audio autoplay="autoplay" controls="controls" loop="loop" >
+            <source src="https://ia800209.us.archive.org/16/items/NujabesBattlecry1652932Soundcloud1/Nujabes%20-%20Battlecry_1652932_soundcloud%20%281%29.mp3" type="audio/mpeg" />
+    </audio>
+
+    <button class="restart">Restart?</button>
 
     <script src="js/app.js"></script>
 </body>
-<footer>
-        <audio autoplay="autoplay" controls="controls" loop="loop" >
-                <source src="https://ia800209.us.archive.org/16/items/NujabesBattlecry1652932Soundcloud1/Nujabes%20-%20Battlecry_1652932_soundcloud%20%281%29.mp3" type="audio/mpeg" />
-               </audio>
-</footer>
 </html>
